Done homework at 22:30 MSK 07.02.2023

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,1 +1,27 @@
-
+server:
+  port: 8080
+  servlet:
+    context-path: /
+logging:
+  level:
+    org:
+      springframework:
+        security: debug
+    com:
+      buzas:
+        springstorehomework:
+          controllers: error
+          services: error
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/lesson7?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: root
+  jpa:
+    hibernate:
+      ddl-auto: update
+  mvc:
+    hiddenmethod:
+      filter:
+        enabled: true
